<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/nav_habits" />

    <item
        android:id="@+id/nav_mood"
        android:icon="@drawable/ic_mood"
        android:title="@string/nav_mood" />

    <item
        android:id="@+id/nav_quick_log"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_quick_log" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>

